# cancel.it

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  app.py  pyproject.toml
src/: app.py  config.py  logic.py  storage.py
test/: test_logic.py
