[project]
name = "cancel-it"
version = "0.1.0"
description = "A cure for the Abilene Paradox"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E: pycodestyle errors
# F: Pyflakes (bugs)
# I: Import sorting (organizes your imports automatically)
select = ["E", "F", "I"]
